--- a/runtracker/src/main/resources/templates/signin.html
+++ b/runtracker/src/main/resources/templates/signin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<title>Sign In</title>
 	</head>
@@ -15,5 +15,8 @@
 			<button type="submit">Sign In</button>
 		</form>
 		<p>Don't have an account? <a href="/user/signup">Sign Up</a></p>
+
+		<!-- Tampilkan pesan error -->
+		<p th:if="${error}" th:text="${error}" style="color: red"></p>
 	</body>
 </html>
