--- a/runtracker/src/main/resources/static/css/index.css
+++ b/runtracker/src/main/resources/static/css/index.css
@@ -1,14 +1,17 @@
-body {
-	font-family: Arial, sans-serif;
-	margin: 0;
+* {
 	padding: 0;
-	background-color: #f4f4f9;
+	margin: 0;
+	box-sizing: border-box;
+	font-family: "Rubik", sans-serif;
 }
 
-main {
-	padding: 20px;
-}
-
-h1 {
-	color: #333;
+body {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	min-height: 100vh;
+	background-image: url(../img/runner-5.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
 }
