--- a/runtracker/src/main/resources/templates/signin.html
+++ b/runtracker/src/main/resources/templates/signin.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 	<head>
+		<link rel="stylesheet" href="/css/signin-style.css">
 		<title>Sign In</title>
 	</head>
 	<body>
-		<h1>Sign In</h1>
-		<form action="/user/signin" method="post">
-			<label>Email:</label>
-			<input type="email" name="email" required />
-			<br />
-			<label>Password:</label>
-			<input type="password" name="password" required />
-			<br />
-			<button type="submit">Sign In</button>
-		</form>
-		<p>Don't have an account? <a href="/user/signup">Sign Up</a></p>
+		<section>
+			<form action="/user/signin" method="post">
+				<h1>Sign In</h1>
+				<div class="inputbox">
+					<ion-icon name="mail-outline"></ion-icon>
+					<label>Email:</label>
+					<input type="email" name="email" class="input-field" required />
+					<br />
+				</div>
+				<div class="inputbox">
+					<ion-icon name="lock-closed-outline"></ion-icon>
+					<label>Password:</label>
+					<input type="password" name="password" class="input-field" required />
+					<br />
+				</div>
 
-		<!-- Tampilkan pesan error -->
-		<p th:if="${error}" th:text="${error}" style="color: red"></p>
+				<button type="submit">Sign In</button>
+				<div class="login">
+					<p>Don't have an account? <a href="/user/signup">Sign Up</a></p>
+				</div>
+
+				<!-- Tampilkan pesan error -->
+				<p th:if="${error}" th:text="${error}" style="color: red"></p>
+			</form>
+		</section>
+
+		<script src="/js/signin-script.js"></script>
 	</body>
 </html>
