--- a/runtracker/src/main/resources/static/css/index.css
+++ b/runtracker/src/main/resources/static/css/index.css
@@ -5,13 +5,21 @@
 	font-family: "Rubik", sans-serif;
 }
 
+:root {
+	--bg-color: #1f1f21;
+	--text-color: #fff;
+	--main-color: #ffae00;
+
+	--big-font: 7rem;
+	--p-font: 1.1rem;
+}
+
 body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	min-height: 100vh;
-	background-image: url(../img/runner-5.png);
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
+	background: var(--bg-color);
+	color: var(--text-color);
+	overflow-x: hidden;
 }
