--- a/runtracker/src/main/resources/templates/signin.html
+++ b/runtracker/src/main/resources/templates/signin.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/signin.css" />
 	</head>
 	<body>
-		<div class="signup-container">
+		<div class="signin-container">
 			<h1>Sign In</h1>
 			<form action="/user/signin" method="post">
 				<label for="email">Email:</label>
