--- a/runtracker/src/main/resources/templates/homepage.html
+++ b/runtracker/src/main/resources/templates/homepage.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Dashboard</title>
+    <title>Home</title>
     <link rel="stylesheet" href="/css/index.css" />
     <link rel="stylesheet" href="/css/navbar.css" />
     <link rel="stylesheet" href="/css/homepage-style.css" />
