--- a/runtracker/src/main/resources/templates/fragments/navbar.html
+++ b/runtracker/src/main/resources/templates/fragments/navbar.html
@@ -2,6 +2,9 @@
 <div class="navbar" th:fragment="navbar">
 	<nav>
 		<ul>
+			<li><a href="/dashboard">Dashboard</a></li>
+			<li><a href="/activity">Activity</a></li>
+			<li><a href="/race">Race</a></li>
 			<li><a href="/user/profile">Profile</a></li>
 			<li><a href="/user/signout">Sign Out</a></li>
 		</ul>
