--- a/runtracker/src/main/resources/templates/fragments/navbar.html
+++ b/runtracker/src/main/resources/templates/fragments/navbar.html
@@ -6,7 +6,7 @@
 			<li><a href="/activity">Activity</a></li>
 			<li><a href="/race">Race</a></li>
 			<li><a href="/user/profile">Profile</a></li>
-			<li><a href="/user/signout">Sign Out</a></li>
+			<li class="signout"><a href="/user/signout">Sign Out</a></li>
 		</ul>
 	</nav>
 </div>
