--- a/runtracker/src/main/resources/static/css/navbar.css
+++ b/runtracker/src/main/resources/static/css/navbar.css
@@ -64,5 +64,40 @@
 
 .nav-content ul li a:hover {
 	color: white;
-	/* Optional: Adjust hover color */
+}
+
+.modal {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.6);
+	z-index: 1001;
+	justify-content: center;
+	align-items: center;
+}
+
+.modal-content {
+	background-color: gray;
+	padding: 20px;
+	border-radius: 8px;
+	width: 80%;
+	max-width: 500px;
+	text-align: center;
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.close-button {
+	position: absolute;
+	top: 10px;
+	right: 15px;
+	font-size: 1.5rem;
+	color: #333333;
+	cursor: pointer;
+}
+
+.close-button:hover {
+	color: #ff0000;
 }
