--- a/runtracker/src/main/resources/templates/index.html
+++ b/runtracker/src/main/resources/templates/index.html
@@ -14,7 +14,8 @@
 		<main th:insert="~{${page}}"></main>
 
 		<!-- Scripts -->
-		<script th:src="@{/js/navbar.js}"></script>
-		<script th:src="@{/js/__${page}__.js}"></script>
+		<script th:src="@{/js/navbar.js}" defer></script>
+		<script th:src="@{/js/__${page}__.js}" defer></script>
+		<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 	</body>
 </html>
