--- a/runtracker/src/main/resources/templates/home.html
+++ b/runtracker/src/main/resources/templates/home.html
@@ -1,5 +1,10 @@
 <main>
 	<section class="home">
+		<div class="slideshow">
+			<div class="slide" style="background-image: url('/img/img-1.jpg');"></div>
+			<div class="slide" style="background-image: url('/img/img-2.jpg');"></div>
+			<div class="slide" style="background-image: url('/img/img-3.jpg');"></div>
+		</div>
 		<div class="home-text">
 			<span>Run Tracker</span>
 			<h1>TrackFusion</h1>
