--- a/runtracker/src/main/resources/static/css/home.css
+++ b/runtracker/src/main/resources/static/css/home.css
@@ -1,4 +1,3 @@
-
 section {
     padding: 0 15%;
 }
@@ -7,21 +6,61 @@ section {
     position: relative;
     width: 100%;
     height: 100vh;
+    overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 30px;
 }
 
-.home-img {
-    width: 730px;
-    height: 730px;
-}
-
-.home-img img {
+.slideshow {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    z-index: -1;
+    animation: slideShow 15s infinite;
+}
+
+.slide {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+
+.slide:nth-child(1) {
+    animation: fade 15s infinite 0s;
+}
+
+.slide:nth-child(2) {
+    animation: fade 15s infinite 5s;
+}
+
+.slide:nth-child(3) {
+    animation: fade 15s infinite 10s;
+}
+
+@keyframes fade {
+
+    0%,
+    33.33% {
+        opacity: 1;
+    }
+
+    66.66%,
+    100% {
+        opacity: 0;
+    }
+}
+
+.home-text {
+    position: relative;
+    z-index: 1;
+    color: black;
 }
 
 .home-text span {
@@ -30,7 +69,7 @@ section {
     box-shadow: 0px 20px 40px #00000070;
     border: 1px solid #3b3b3b;
     border-radius: 100px;
-    color: var(--text-color);
+    color: #fff;
     font-weight: 700;
     font-size: 15px;
     text-transform: uppercase;
@@ -44,7 +83,7 @@ section {
 .home-text p {
     font-size: var(--p-font);
     font-weight: 400;
-    color: #c3c3c3;
+    color: white;
     line-height: 30px;
     margin-bottom: 30px;
 }
@@ -53,7 +92,7 @@ section {
     display: inline-block;
     padding: 14px 34px;
     background: var(--main-color);
-    color: var(--text-color);
+    color: #fff;
     border: 2px solid var(--main-color);
     font-size: 16px;
     font-weight: 600;
@@ -65,38 +104,4 @@ section {
     transform: translateY(-5px);
     background: transparent;
     color: var(--main-color);
-}
-
-.share {
-    position: absolute;
-    bottom: 3rem;
-    left: 15%;
-    display: flex;
-    align-items: center;
-}
-
-.share p {
-    font-size: 17px;
-    color: var(--text-color);
-    margin-right: 25px;
-}
-
-.social i {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    height: 45px;
-    width: 45px;
-    background: linear-gradient(130.08deg, #383528 0%, #191919 100%);
-    box-shadow: 0px 20px 40px #00000070;
-    border: 1px solid #3b3b3b;
-    border-radius: 50%;
-    color: var(--text-color);
-    font-size: 20px;
-    margin: 0 7px;
-    transition: all 0.6s ease-in-out;
-}
-
-.social i:hover {
-    transform: translateY(-10px);
 }
