--- a/runtracker/src/main/resources/static/css/home.css
+++ b/runtracker/src/main/resources/static/css/home.css
@@ -13,12 +13,13 @@ section {
 }
 
 .slideshow {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: -1;
+    overflow: hidden;
     animation: slideShow 15s infinite;
 }
 
@@ -86,6 +87,12 @@ section {
     color: white;
     line-height: 30px;
     margin-bottom: 30px;
+    text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
+    font-weight: bold;
 }
 
 .btn {
