--- a/runtracker/src/main/resources/static/css/home.css
+++ b/runtracker/src/main/resources/static/css/home.css
@@ -91,7 +91,8 @@ section {
         -1px -1px 0 #000,
         1px -1px 0 #000,
         -1px 1px 0 #000,
-        1px 1px 0 #000;
+        1px 1px 0 #000,
+        0px 0px 5px #000;
     font-weight: bold;
 }
 
