--- a/runtracker/src/main/resources/templates/upload.html
+++ b/runtracker/src/main/resources/templates/upload.html
@@ -5,8 +5,9 @@
 	</head>
 	<body>
 		<h1>Upload a File</h1>
-		<form method="POST" action="/upload" enctype="multipart/form-data">
-			<input type="file" name="file" /><br /><br />
+		<form method="POST" action="/activity" enctype="multipart/form-data">
+			<input type="text" name="title" required />
+			<input type="file" name="image" required /><br /><br />
 			<button type="submit">Upload</button>
 		</form>
 	</body>
